@@ -3,10 +3,11 @@ use strict;
 use warnings;
 
 use Test::More;
-use Math::Prime::Util::GMP qw/next_prime prev_prime surround_primes/;
+use Math::Prime::Util::GMP qw/next_prime prev_prime surround_primes
+                              next_twin_prime powint addint/;
 my $extra = defined $ENV{EXTENDED_TESTING} && $ENV{EXTENDED_TESTING};
 
-plan tests => 2 + 3*2 + 6 + 1 + 2 + 1 + 2 + 7 + 3*$extra;
+plan tests => 2 + 3*2 + 6 + 1 + 2 + 1 + 2 + 7 + 3*$extra + 2;
 
 my @small_primes = qw/
 2 3 5 7 11 13 17 19 23 29 31 37 41 43 47 53 59 61 67 71 73 79 83 89 97
@@ -106,4 +107,22 @@ if ($extra) {
   my $c85 = "2642497284992010196102315442455595356723557223592608572003000275424902281588892769763";
   is_deeply([surround_primes($c85)], [32,456], "surround_primes(c85)");
   is_deeply([surround_primes($c85,200)], [32,0], "surround_primes(c85,200)");
+}
+##########################################
+{
+  # Only a subset of the results
+  my @a124001 = (qw/2 1 1 19 7 151 37 139 37 7 277 817 61 1267 97 2371 1549 19 619 97 391 409 649 5527 2731 559 949 427 601 2797 1681 7189 2449 6751 7597 8419 16879 871 5569 10327 16111 2131 6121 23329 5179 4249 2641 2257 3997 8281 18307 7537 41347 25831 3397 7687 6637 7381 16597 9091 23599 27319 4711 22249 6517 7579 4051 1777 12949 38119 17887 3319 38671 829 19219 24721 4489 45469 2581 30511 37759/);
+  my(@got, @exp);
+  for my $i (0 .. $#a124001) {
+    my $n = powint(10,$i);
+    push @exp, addint($n, $a124001[$i]);
+    push @got, next_twin_prime($n);
+  }
+  is_deeply(\@got, \@exp, "twin primes 10^x");
+}
+{
+  my @a113275 = (qw/3 5 17 41 71 311 347 659 2381 5879 13397 18539 24419 62297 187907 687521 688451 850349 2868959 4869911 9923987 14656517 17382479 30752231 32822369 96894041 136283429 234966929 248641037 255949949 390817727 698542487 2466641069 4289385521 19181736269 24215097497 24857578817 40253418059 42441715487 43725662621 65095731749 134037421667 198311685749 223093059731 353503437239 484797803249 638432376191 784468515221 794623899269 1246446371789 1344856591289 1496875686461 2156652267611 2435613754109 4491437003327 13104143169251 14437327538267 18306891187511 18853633225211 23275487664899 23634280586867 38533601831027 43697538391391 56484333976919 74668675816277 116741875898981 136391104728629 221346439666109 353971046703347 450811253543219 742914612256169 1121784847637957 1149418981410179 2543288406389231 2797282815481499/);
+  my @a036062 = (qw/5 11 29 59 101 347 419 809 2549 6089 13679 18911 24917 62927 188831 688451 689459 851801 2870471 4871441 9925709 14658419 17384669 30754487 32825201 96896909 136286441 234970031 248644217 255953429 390821531 698547257 2466646361 4289391551 19181742551 24215103971 24857585369 40253424707 42441722537 43725670601 65095739789 134037430661 198311695061 223093069049 353503447439 484797813587 638432386859 784468525931 794623910657 1246446383771 1344856603427 1496875698749 2156652280241 2435613767159 4491437017589 13104143183687 14437327553219 18306891202907 18853633240931 23275487681261 23634280603289 38533601847617 43697538408287 56484333994001 74668675834661 116741875918727 136391104748621 221346439686641 353971046725277 450811253565767 742914612279527 1121784847661339 1149418981435409 2543288406415499 2797282815510341/);
+  if (!$extra) { $#a113275 = 30; $#a036062 = 30; }
+  is_deeply([map { next_twin_prime($_) } @a113275], \@a036062, "next_twin_prime on record gaps");
 }
